# SerializabilityChecker

./: .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: clang_checks.cmake
src/: CMakeLists.txt  conflict_graph.h  graph.h  main.cc  operation.cc  operation.h
tests/: CMakeLists.txt  conflict_graph_test.cc  graph_test.cc  operation_test.cc
